--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -1,12 +1,12 @@
-people: [people/adelman.joshua.html, people/ahmadia.a.html, people/aiello-lammens.matthew.html,
-  people/ainsley.joshua.html, people/alexander.harriet.html, people/alleen-willems.russell.html,
-  people/allen.james.html, people/alonzi.pete.html, people/alsheikh-hussain.areej.html,
-  people/anderson.c.html, people/anghel.catalina.html, people/antonioletti.mario.html,
-  people/aranda.j.html, people/aruliah.d.html, people/avestruz.camille.html, people/bae.sung.html,
-  people/bahlai.christie.html, people/banaszkiewicz.piotr.html, people/barmby.pauline.html,
-  people/barneche.diego.html, people/barr.ewan.html, people/bast.radovan.html, people/bauer.dana.html,
-  people/bayer.p.html, people/beagrie.robert.html, people/bekolay.trevor.html, people/belcaid.mahdi.html,
-  people/belikov.evgenij.html, people/bennett.n.html, people/berry.michelle.html,
+people: [people/adams.james.html, people/adelman.joshua.html, people/ahmadia.a.html,
+  people/aiello-lammens.matthew.html, people/ainsley.joshua.html, people/alexander.harriet.html,
+  people/alleen-willems.russell.html, people/allen.james.html, people/alonzi.pete.html,
+  people/alsheikh-hussain.areej.html, people/anderson.c.html, people/anghel.catalina.html,
+  people/antonioletti.mario.html, people/aranda.j.html, people/aruliah.d.html, people/avestruz.camille.html,
+  people/bae.sung.html, people/bahlai.christie.html, people/banaszkiewicz.piotr.html,
+  people/barmby.pauline.html, people/barneche.diego.html, people/barr.ewan.html, people/bast.radovan.html,
+  people/bauer.dana.html, people/bayer.p.html, people/beagrie.robert.html, people/bekolay.trevor.html,
+  people/belcaid.mahdi.html, people/belikov.evgenij.html, people/bennett.n.html, people/berry.michelle.html,
   people/blakk.lukas.html, people/blischak.j.html, people/boettiger.carl.html, people/boissonneault.maxime.html,
   people/bonnie.jessica.html, people/boocock.james.html, people/bostroem.a.html, people/boughton.andrew.html,
   people/boyle.amy.html, people/bray.e.html, people/broman.karl.html, people/brown.amy.html,
@@ -85,32 +85,33 @@ people: [people/adelman.joshua.html, people/ahmadia.a.html, people/aiello-lammen
   people/schossau.j.html, people/schwartz.rachel.html, people/scopatz.a.html, people/selik.m.html,
   people/serra.neem.html, people/shambaugh.brent.html, people/sharan.malvika.html,
   people/shelton.j.html, people/shelton.jennifer.html, people/sheneman.leigh.html,
-  people/shih.yu-ching.html, people/silva.raniere.html, people/simpkin.sarah.html,
-  people/simpson.jack.html, people/simpson.john.html, people/slaybaugh.rachel.html,
+  people/sherman.jason.html, people/shih.yu-ching.html, people/silva.raniere.html,
+  people/simpkin.sarah.html, people/simpson.jack.html, people/simpson.john.html, people/slaybaugh.rachel.html,
   people/sloggett.clare.html, people/small.luc.html, people/smith.byron.html, people/smith.daniel.html,
-  people/smith.j.html, people/smorul.mike.html, people/soontiens.nancy.html, people/speer.donald.html,
-  people/srinath.ashwin.html, people/srinivasan.karthik.html, people/st-onge.pier-luc.html,
-  people/stacy.mark.html, people/standage.daniel.html, people/stanton-cook.mitchell.html,
-  people/staton.margaret.html, people/steinbach.peter.html, people/stevens.sarah.html,
-  people/stillwell.mark.html, people/strootman.jonathan.html, people/sumner.mike.html,
-  people/sundaram.arvind.html, people/supp.s.html, people/svaksha.html, people/swaminathan.gayathri.html,
-  people/taber-thomas.bradley.html, people/tarkowski.leszek.html, people/tarvin.becca.html,
-  people/tatman.rachael.html, people/teal.t.html, people/teucher.andrew.html, people/thomas.adam.html,
-  people/thomson.samuel.html, people/till.robert.html, people/timbers.tiffany.html,
-  people/tomsett.richard.html, people/trimble.will.html, people/turek.daniel.html,
-  people/turner.s.html, people/tweedie.fiona.html, people/ushizima.daniela.html, people/vahtras.olav.html,
-  people/vaidyanathan.ramnath.html, people/valls-guimera.roman.html, people/van-der-walt.anelda.html,
-  people/vanichkina.darya.html, people/varga.vicky.html, people/vargas.horacio.html,
-  people/varoquaux.n.html, people/vera.b.html, people/viana.a.html, people/von-bieberstein.philipp.html,
-  people/vonderlinden.jens.html, people/wake.leanne.html, people/walker.andrew.html,
-  people/walsh.alistair.html, people/warren.dan.html, people/wasser.leah.html, people/waugh.b.html,
-  people/weaver.belinda.html, people/weinstein.ben.html, people/white.e.html, people/white.easton.html,
-  people/whitefield.shawn.html, people/whitehead.tyson.html, people/wijeratne.asela.html,
-  people/wilber.mark.html, people/wilkerson.chandler.html, people/williams.jason.html,
-  people/williams.l.html, people/williams.ryan.html, people/wilson.g.html, people/wilson.p.html,
-  people/winston.donald.html, people/winton.jared.html, people/woo.kara.html, people/woods.c.html,
-  people/wright.thomas.html, people/yang.fan.html, people/yang.hsi-kai.html, people/zakkaroff.constantine.html,
-  people/zhang.qp.html, people/zimmerman.naupaka.html, people/zito.t.html, people/zonca.andrea.html]
+  people/smith.j.html, people/smorul.mike.html, people/soderberg.courtney.html, people/soontiens.nancy.html,
+  people/speer.donald.html, people/srinath.ashwin.html, people/srinivasan.karthik.html,
+  people/st-onge.pier-luc.html, people/stacy.mark.html, people/standage.daniel.html,
+  people/stanton-cook.mitchell.html, people/staton.margaret.html, people/steinbach.peter.html,
+  people/stevens.sarah.html, people/stillwell.mark.html, people/strootman.jonathan.html,
+  people/sumner.mike.html, people/sundaram.arvind.html, people/supp.s.html, people/svaksha.html,
+  people/swaminathan.gayathri.html, people/taber-thomas.bradley.html, people/tarkowski.leszek.html,
+  people/tarvin.becca.html, people/tatman.rachael.html, people/teal.t.html, people/teucher.andrew.html,
+  people/thomas.adam.html, people/thomson.samuel.html, people/till.robert.html, people/timbers.tiffany.html,
+  people/tomlinson.christopher.html, people/tomsett.richard.html, people/trimble.will.html,
+  people/turek.daniel.html, people/turner.s.html, people/tweedie.fiona.html, people/ushizima.daniela.html,
+  people/vahtras.olav.html, people/vaidyanathan.ramnath.html, people/valls-guimera.roman.html,
+  people/van-der-walt.anelda.html, people/vanichkina.darya.html, people/varga.vicky.html,
+  people/vargas.horacio.html, people/varoquaux.n.html, people/vera.b.html, people/viana.a.html,
+  people/von-bieberstein.philipp.html, people/vonderlinden.jens.html, people/wake.leanne.html,
+  people/walker.andrew.html, people/walsh.alistair.html, people/warren.dan.html, people/wasser.leah.html,
+  people/waugh.b.html, people/weaver.belinda.html, people/weinstein.ben.html, people/white.e.html,
+  people/white.easton.html, people/whitefield.shawn.html, people/whitehead.tyson.html,
+  people/wijeratne.asela.html, people/wilber.mark.html, people/wilkerson.chandler.html,
+  people/williams.jason.html, people/williams.l.html, people/williams.ryan.html, people/wilson.g.html,
+  people/wilson.p.html, people/winston.donald.html, people/winton.jared.html, people/woo.kara.html,
+  people/woods.c.html, people/wright.thomas.html, people/yang.fan.html, people/yang.hsi-kai.html,
+  people/zakkaroff.constantine.html, people/zhang.qp.html, people/zimmerman.naupaka.html,
+  people/zito.t.html, people/zonca.andrea.html]
 projects: [projects/active-papers.html, projects/archer.html, projects/astropy.html,
   projects/biostars.html, projects/cyclus.html, projects/ecodata-retriever.html, projects/eff-phys.html,
   projects/gap.html, projects/genomics-virtual-lab.html, projects/ipfs.html, projects/iplant.html,
