--- a/_config.yml
+++ b/_config.yml
@@ -59,8 +59,9 @@ flag_size       : 16
 #
 urlimg: 'http://dev.software-carpentry.org/files/'
 
-# Logo size should be 600x80 pixels but is 445x90
-logo: "logo.png"
+# Logo image (white with transparent background to stand out on blue background)
+logo: "logo-white.png"
+# logo: "logo-blue.png"
 
 # Paginates all X entries
 paginate: 10
