Indexing blog posts by category.
1.  Adding a blog/categories.html page (shows up at /blog/categories/).
2.  Adding navigation link.
3.  Fixing typos detected while doing this.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -83,6 +83,8 @@
     url: "/blog/"
   - title: "Blog Archive"
     url: "/blog/archive/"
+  - title: "Blog Posts by Category"
+    url: "/blog/categories/"
   - title: "Commenting Policy"
     url: "/commenting/"
 
