Indexing by date and category

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -87,6 +87,8 @@
     url: "/blog/archive/"
   - title: "Blog Posts by Category"
     url: "/blog/categories/"
+  - title: "Blog Posts by Date"
+    url: "/blog/dates/"
   - title: "Commenting Policy"
     url: "/commenting/"
 
