--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ flag_size       : 16
 urlimg: 'http://dev.software-carpentry.org/files/'
 
 # Logo image (white with transparent background to stand out on blue background)
-logo: "logo-white.svg"
+logo: "swc-logo-white.svg"
 
 # Paginates all X entries
 paginate: 10
