--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -11,24 +11,25 @@ people: [people/adams.james.html, people/adelman.joshua.html, people/ahmadia.a.h
   people/bonnie.jessica.html, people/boocock.james.html, people/bostroem.a.html, people/boughton.andrew.html,
   people/boyle.amy.html, people/bray.e.html, people/broman.karl.html, people/brown.amy.html,
   people/brown.ct.html, people/brown.kyler.html, people/bryan.j.html, people/burns.s.html,
-  people/cabunoc.abigail.html, people/camins-esakov.jared.html, people/canino-koning.r.html,
-  people/cannam.c.html, people/caporaso.greg.html, people/cerino.t.html, people/chamberlain.s.html,
-  people/chan.cliburn.html, people/charbonneau.amanda.html, people/chase.john.html,
-  people/chen.daniel.html, people/chisholm.chelsea.html, people/cholia.s.html, people/chuang-howe.a.html,
-  people/chue-hong.n.html, people/chung.kathy.html, people/clayton.sophie.html, people/code.w.html,
-  people/coelho.luis.html, people/collings.ruth.html, people/collins.arliss.html,
+  people/cabunoc.abigail.html, people/calhoun.patrick.html, people/camins-esakov.jared.html,
+  people/canino-koning.r.html, people/cannam.c.html, people/caporaso.greg.html, people/cerino.t.html,
+  people/chamberlain.s.html, people/chan.cliburn.html, people/charbonneau.amanda.html,
+  people/chase.john.html, people/chen.daniel.html, people/chisholm.chelsea.html, people/cholia.s.html,
+  people/chuang-howe.a.html, people/chue-hong.n.html, people/chung.kathy.html, people/clayton.sophie.html,
+  people/code.w.html, people/coelho.luis.html, people/collings.ruth.html, people/collins.arliss.html,
   people/collins.matthew.html, people/cordero.victor.html, people/corless.john.html,
   people/corvellec.marianne.html, people/coudrat.thomas.html, people/cox.logan.html,
   people/cozzini.s.html, people/cranston.k.html, people/crouch.nicholas.html, people/crouch.s.html,
   people/croucher.mike.html, people/crusoe.michael.html, people/daigle.remi.html,
   people/dale.ryan.html, people/dashnow.harriet.html, people/davenport.e.html, people/davey.rob.html,
-  people/davis.m.html, people/davis.neal.html, people/demichelis.raffaella.html, people/desjardins.james.html,
-  people/devenyi.gabriel.html, people/devlin.catherine.html, people/dickenson.matt.html,
-  people/dickson.r.html, people/dolson.emily.html, people/dotson.david.html, people/doyle.kimberly.html,
-  people/duchesne.laurent.html, people/duckles.jonah.html, people/duffy.meghan.html,
-  people/duncan.susan.html, people/eddelbuettel.dirk.html, people/ely.j.html, people/emonet.remi.html,
-  people/erlich.aaron.html, people/evans.andy.html, people/falster.daniel.html, people/farsarakis.emmanouil.html,
-  people/fei.xu.html, people/ferguson.angus.html, people/fernandes.filipe.html, people/figueira.l.html,
+  people/davis.m.html, people/davis.neal.html, people/demichelis.raffaella.html, people/derrick.james.html,
+  people/desjardins.james.html, people/devenyi.gabriel.html, people/devlin.catherine.html,
+  people/dickenson.matt.html, people/dickson.r.html, people/dolson.emily.html, people/dotson.david.html,
+  people/doyle.kimberly.html, people/duchesne.laurent.html, people/duckles.jonah.html,
+  people/duffy.meghan.html, people/duncan.susan.html, people/eddelbuettel.dirk.html,
+  people/ely.j.html, people/emonet.remi.html, people/erlich.aaron.html, people/evans.andy.html,
+  people/falster.daniel.html, people/farsarakis.emmanouil.html, people/fei.xu.html,
+  people/ferguson.angus.html, people/fernandes.filipe.html, people/figueira.l.html,
   people/fitzjohn.rich.html, people/fonnesbeck.chris.html, people/fontenelle.hugues.html,
   people/forstner.konrad.html, people/fournier.auriel.html, people/fowler.philip.html,
   people/friedline.chris.html, people/fu.zhuo.html, people/gan.emilia.html, people/garcia-algarra.javier.html,
@@ -53,14 +54,14 @@ people: [people/adams.james.html, people/adelman.joshua.html, people/ahmadia.a.h
   people/konrad.b.html, people/kwakwa.kwasi.html, people/lafleur.olivier.html, people/laforest-lapointe.isabelle.html,
   people/lagesen.k.html, people/lake.sherry.html, people/lant.jeremiah.html, people/lasher.c.html,
   people/latornell.d.html, people/laufersweiler.mark.html, people/lebauer.david.html,
-  people/lee.kate.html, people/lee.kwangchun.html, people/lee.luke.html, people/levernier.jacob.html,
-  people/leyder.jean-christophe.html, people/lightman.matthew.html, people/lin.johnny.html,
-  people/lonsdale.andrew.html, people/lowe.elijah.html, people/luo.yuxi.html, people/macdonell.cam.html,
-  people/macindoe.gary.html, people/maclean.dan.html, people/madin.j.html, people/madison.cindee.html,
-  people/mansour.tamer.html, people/martinez.paula.html, people/marwaha.kunal.html,
-  people/marwick.ben.html, people/masoud-ansari.sina.html, people/mcdonald.daniel.html,
-  people/mcgough.s.html, people/mcgoveran.catherine.html, people/mckay.sheldon.html,
-  people/mckellar.j.html, people/mckinley.maria.html, people/mclean.cameron.html,
+  people/lee.kate.html, people/lee.kwangchun.html, people/lee.luke.html, people/lehtomaki.joona.html,
+  people/levernier.jacob.html, people/leyder.jean-christophe.html, people/lightman.matthew.html,
+  people/lin.johnny.html, people/liu.gang.html, people/lonsdale.andrew.html, people/lowe.elijah.html,
+  people/luo.yuxi.html, people/macdonell.cam.html, people/macindoe.gary.html, people/maclean.dan.html,
+  people/madin.j.html, people/madison.cindee.html, people/mansour.tamer.html, people/martinez.paula.html,
+  people/marwaha.kunal.html, people/marwick.ben.html, people/masoud-ansari.sina.html,
+  people/mcdonald.daniel.html, people/mcgough.s.html, people/mcgoveran.catherine.html,
+  people/mckay.sheldon.html, people/mckellar.j.html, people/mckinley.maria.html, people/mclean.cameron.html,
   people/mctavish.ej.html, people/metz.jeremy.html, people/michael.lauren.html, people/michnowicz.s.html,
   people/michonneau.francois.html, people/middleton.ryan.html, people/miles.brian.html,
   people/mills.b.html, people/miotto.amanda.html, people/mistry.meeta.html, people/mitchell.i.html,
@@ -103,15 +104,15 @@ people: [people/adams.james.html, people/adelman.joshua.html, people/ahmadia.a.h
   people/van-der-walt.anelda.html, people/vanichkina.darya.html, people/varga.vicky.html,
   people/vargas.horacio.html, people/varoquaux.n.html, people/vera.b.html, people/viana.a.html,
   people/von-bieberstein.philipp.html, people/vonderlinden.jens.html, people/wake.leanne.html,
-  people/walker.andrew.html, people/walsh.alistair.html, people/warren.dan.html, people/wasser.leah.html,
-  people/waugh.b.html, people/weaver.belinda.html, people/weinstein.ben.html, people/white.e.html,
-  people/white.easton.html, people/whitefield.shawn.html, people/whitehead.tyson.html,
-  people/wijeratne.asela.html, people/wilber.mark.html, people/wilkerson.chandler.html,
-  people/williams.jason.html, people/williams.l.html, people/williams.ryan.html, people/wilson.g.html,
-  people/wilson.p.html, people/winston.donald.html, people/winton.jared.html, people/woo.kara.html,
-  people/woods.c.html, people/wright.thomas.html, people/yang.fan.html, people/yang.hsi-kai.html,
-  people/zakkaroff.constantine.html, people/zhang.qp.html, people/zimmerman.naupaka.html,
-  people/zito.t.html, people/zonca.andrea.html]
+  people/walker.andrew.html, people/wallis.mike.html, people/walsh.alistair.html,
+  people/warren.dan.html, people/wasser.leah.html, people/waugh.b.html, people/weaver.belinda.html,
+  people/weinstein.ben.html, people/white.e.html, people/white.easton.html, people/whitefield.shawn.html,
+  people/whitehead.tyson.html, people/whitlock.alexander.html, people/wijeratne.asela.html,
+  people/wilber.mark.html, people/wilkerson.chandler.html, people/williams.jason.html,
+  people/williams.l.html, people/williams.ryan.html, people/wilson.g.html, people/wilson.p.html,
+  people/winston.donald.html, people/winton.jared.html, people/woo.kara.html, people/woods.c.html,
+  people/wright.thomas.html, people/yang.fan.html, people/yang.hsi-kai.html, people/zakkaroff.constantine.html,
+  people/zhang.qp.html, people/zimmerman.naupaka.html, people/zito.t.html, people/zonca.andrea.html]
 projects: [projects/active-papers.html, projects/archer.html, projects/astropy.html,
   projects/biostars.html, projects/cyclus.html, projects/ecodata-retriever.html, projects/eff-phys.html,
   projects/gap.html, projects/genomics-virtual-lab.html, projects/ipfs.html, projects/iplant.html,
