--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -5,9 +5,17 @@
 #
 # Start development with › $ jekyll serve --config _config.yml,_config_dev.yml
 
-url: 'http://0.0.0.0:4000'
-filesurl: 'http://0.0.0.0:4000/files'
-urlimg: 'http://0.0.0.0:4000/files/'
+# Your web site url. eg: http://mysite.com
+# Used to generate absolute links in feeds
+# do not use for internal links (see baseurl comments)
+# NO trailing slash
+url: "http://0.0.0.0:4000"
+
+# Your web site relative path from domain. eg: /folder
+# Used to generate links. eg: <a href="{{ site.baseurl }}/blog/">Blog</a>
+# or for resources <script src="{{ site.baseurl }}/js/js.js"></script>
+# NO trailing slash
+baseurl: "/website"
 
 sass:
   # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
@@ -32,12 +40,12 @@ google_analytics_tracking_id:
 
 # repository url
 # NO TRAILING SLASH
-distantAssetsUrl: "http://0.0.0.0:8000"
+#distantAssetsUrl: "http://0.0.0.0:8000"
 
 # path : "/styles"
 # NO TRAILING SLASH
 # Leave empty if assets are at the root of the domain
-distantAssetsPath: "/assets"
+#distantAssetsPath: "/assets"
 
 exclude:
     - .sass-cache
