--- a/_config.yml
+++ b/_config.yml
@@ -75,13 +75,13 @@ author: gvwilson
 # Used to generate absolute links in feeds
 # do not use for internal links (see baseurl comments)
 # NO trailing slash
-url: "http://software-carpentry.org"
+url: "http://swctasks.github.io"
 
 # Your web site relative path from domain. eg: /folder
 # Used to generate links. eg: <a href="{{ site.baseurl }}/blog/">Blog</a>
 # or for resources <script src="{{ site.baseurl }}/js/js.js"></script>
 # NO trailing slash
-baseurl: ""
+baseurl: "website"
 
 # Your files relative path from domain. eg: /files
 # used to generate links to images, pdf, ...
